# gaze-stabilization

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/conf/: config.ini  imuIdentifier.ini  imuIdentifierB.ini  imuIdentifierC.ini  torsoController.ini  torsoControllerA.ini  torsoControllerB.ini
app/scripts/: gazeStabilizer.xml  gazeStabilizer.xml.template  gazeStabilizerDumper.xml
models/: controller_design.pptx  controller_design.slx  ctrl_stab.slx  ctrl_stab_new.slx  ctrl_stab_pos.slx  ctrl_stab_vel.slx  design_ctrl_imu_yaw.slx  design_ctrl_imu_yaw_r2013a.slx  ident.fig  imu.mat  imu.sid  imu.slx  imu_yaw.mat
modules/: CMakeLists.txt
modules/armFollower/: CMakeLists.txt  armFollower.cpp
modules/gazeEvaluator/: CMakeLists.txt  gazeEvaluatorModule.cpp  gazeEvaluatorThread.cpp  gazeEvaluatorThread.h
modules/gazeStabilizer/: CMakeLists.txt  gazeStabilizerModule.cpp  gazeStabilizerThread.cpp  gazeStabilizerThread.h
modules/headFollower/: CMakeLists.txt  headFollowerModule.cpp  headFollowerThread.cpp  headFollowerThread.h
modules/iKinGazeCtrlMOD/: CMakeLists.txt
modules/iKinGazeCtrlMOD/include/iCub/: controller.h
modules/iKinGazeCtrlMOD/src/: controller.cpp  main.cpp
modules/imuIdentifier/: CMakeLists.txt  imuIdentifierModule.cpp  imuIdentifierThread.cpp  imuIdentifierThread.h
modules/torsoController/: CMakeLists.txt  torsoControllerModule.cpp  torsoControllerThread.cpp  torsoControllerThread.h
src/: gazeStabilizerThread.cpp  gazeStabilizerThread.h
